# yocto_example

./: Makefile  Makefile.am  configure.ac  hello_world.c
